Completed crash course for HTML! My first HTML files and my notes

--- a/WebDev/HTML/index.html
+++ b/WebDev/HTML/index.html
@@ -6,6 +6,9 @@
         </title>
     </head>
     <body>
+        <a href="blog.html">Go to Joon's Blog!</a>
+        <hr>
+
         <!-- Headings -->
         <h1 title="My Company">Heading One</h1>
         <h2>Heading Two</h2>
