--- a/WebDev/social-links-profile-main/HTML/index.html
+++ b/WebDev/social-links-profile-main/HTML/index.html
@@ -26,12 +26,12 @@
                 <div class="location">London, United Kingdom</div>
                 <p class="description">"Front-end developer and avid reader."</p>
                 
-                <ul>
-                    <li>GitHub</li>
-                    <li>Frontend Mentor</li>
-                    <li>LinkedIn</li>
-                    <li>Twitter</li>
-                    <li>Instagram</li>
+                <ul class="socials">
+                    <li><a href="#">GitHub</a></li>
+                    <li><a href="#">Frontend Mentor</a></li>
+                    <li><a href="#">LinkedIn</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Instagram</a></li>
                 </ul>
             </div>
             
