today marks the day I made my first fullstack application! I made a credit card payment page and made it beautiful with html/css and made it functional with js. I also was able to use node.js and express to make a REST api that sends requests to the server is able to store it in a json that admins can access and download. By doing this, I created a backend, which I connected to the front end to make the application. I'm also going to look at storing the data in a database such as MongoDB. I will update on that soon.

--- a/WebDev/interactive-card-details-form-main/html/index.html
+++ b/WebDev/interactive-card-details-form-main/html/index.html
@@ -41,6 +41,7 @@
             Cardholder Name
             <input 
               id="name-text"
+              name="name"
               type="text" 
               onkeydown="return /[a-z ]/i.test(event.key)" 
               placeholder="e.g. Jane Appleseed" 
@@ -52,6 +53,7 @@
             Card Number
             <input 
               id="card-number" 
+              name="number"
               type="number" 
               maxlength="16" 
               placeholder="e.g. 1234 5678 9123 0000" 
@@ -70,6 +72,7 @@
               <div id="expiry-inputs">
                 <input 
                   id="card-month" 
+                  name="month"
                   type="number" 
                   maxlength="2"
                   placeholder="MM" 
@@ -77,6 +80,7 @@
                   required
                 ><input 
                   id="card-year" 
+                  name="year"
                   type="number" 
                   maxlength="2"
                   placeholder="YY" 
@@ -88,6 +92,7 @@
               <label id="cvc">
                 <input 
                 id="cvc-number" 
+                name="cvc"
                 type="number"
                 maxlength="3"
                 placeholder="e.g. 123" 
