starting to connect the frontend to the backend. Will use redux. I also experimented and made login / register pages with nice aniimations

--- a/WebDev/blog-project/frontend/index.html
+++ b/WebDev/blog-project/frontend/index.html
@@ -4,6 +4,7 @@
     <meta name="author" content="Joon Hugh">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+    <meta name="google-signin-client_id" content="1074748779404-4fh5tfv2ke35rfi228581or0skp2hli9.apps.googleusercontent.com">
     <title>cursor</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/neue-haas-grotesk-display-pro" rel="stylesheet">
@@ -12,5 +13,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://apis.google.com/js/api.js"></script>
   </body>
 </html>
